# aiopandas

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
aiopandas/: .__init__.py.swp  __init__.py
