[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopandas"
version = "0.0.3"
description = "Lightweight Pandas monkey-patch for async map, apply, transform, etc."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Elias Neuman", email = "elias@payperrun.com" }
]
dependencies = [
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/telekinesis-inc/aiopandas"

